First milestone finalizations

--- a/styleguide.html
+++ b/styleguide.html
@@ -69,7 +69,17 @@
 
         <h2>Interactional Elements</h2>
         <div class="button">View Work</div>
-        <h3>Social Media</h3>
+        <h3>Navbar</h3>
+        <br>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </div>
 
