--- a/home.html
+++ b/home.html
@@ -18,14 +18,15 @@
 
 <body>
 
-    <div class="container">
-        <video autoplay loop muted>
+
+    <div class="video-container">
+        <video id="video-bg-elem" autoplay loop muted>
             <source src="vid/home.mp4" type="video/mp4">
         </video>
+    </div>
 
-
-        <header>
-
+    <header>
+        <div class="container">
             <nav>
                 <ul>
                     <li><a class="active" href="home.html">Home</a></li>
@@ -33,14 +34,14 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
+        </div>
+    </header>
 
-        </header>
+    <h1 class="title">Pleasure in the job
+        <br>
+        puts perfection in the work.</h1>
+    <h2 class="titlename">Shot by Birk</h2>
 
-        <h1 class="title">Pleasure in the job
-            <br>
-            puts perfection in the work.</h1>
-        <h2 class="titlename">Shot by Birk</h1>
-    </div>
 
 
 
