Made the about page flexbox responsive

--- a/about.html
+++ b/about.html
@@ -38,16 +38,19 @@
 
     <div class="about-sec">
 
-        <img src="img/me.jpg" alt="Bio">
-        <h1 class="bio">Hi, I'm Brandon.</h1>
-
-
-        <p class="bio">I'm a media arts student from the School of Interactive Arts & Technology at Simon Fraser University. I love to communicate ideas visually through video and motion graphics, engaging the viewer as much as I can while peaking their interest as they watch through videos. For me, the best tool for educating is visual representation; and that's why I want to find new ways to educate people on different aspects of a concept. I'm also a big fan of video games, exercise, and Marvel. </p>
         <div class="bio">
-            <div class="button"><a href="file/Resume%20-%20Brandon%20Birk.pdf" target="_blank">Resume</a></div>
+            <h1>Hi, I'm Brandon.</h1>
+            <br>
+
+            <p>I'm a media arts student from the School of Interactive Arts & Technology at Simon Fraser University. I love to communicate ideas visually through video and motion graphics, engaging the viewer as much as I can while peaking their interest as they watch through videos. For me, the best tool for educating is visual representation; and that's why I want to find new ways to educate people on different aspects of a concept. I'm also a big fan of video games, exercise, and Marvel. </p>
+            <div class="bio">
+                <div class="button"><a href="file/Resume%20-%20Brandon%20Birk.pdf" target="_blank">Resume</a></div>
+            </div>
         </div>
 
-
+        <div class="bioimg">
+            <img src="img/me.jpg" alt="Bio">
+        </div>
     </div>
 
 
