Set the placement of content on respective pages

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
     <div class="video-container">
         <video id="video-bg-elem" autoplay loop muted>
             <source src="vid/home.mp4" type="video/mp4">
+            Video not supported.
         </video>
     </div>
 
