Fixed positioning, added mobile menu, social media icons & contact info

--- a/about.html
+++ b/about.html
@@ -20,21 +20,33 @@
 
 <body>
 
-    <div class="container">
-        <header>
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input hidden type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
 
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a class="active" href="about.html">About</a></li>
-                </ul>
-            </nav>
+            <ul id="menu">
+                <div class="topnavborder">
+                    <div class="container">
+                        <header>
 
-        </header>
+                            <nav>
+                                <ul>
+                                    <li><a href="home.html">Home</a></li>
+                                    <li><a href="work.html">Work</a></li>
+                                    <li><a class="active" href="about.html">About</a></li>
+                                </ul>
+                            </nav>
 
-    </div>
+                        </header>
 
+                    </div>
+                </div>
+            </ul>
+        </div>
+    </nav>
 
     <div class="about-sec">
 
@@ -43,6 +55,8 @@
             <br>
 
             <p>I'm a media arts student from the School of Interactive Arts & Technology at Simon Fraser University. I love to communicate ideas visually through video and motion graphics, engaging the viewer as much as I can while peaking their interest as they watch through videos. For me, the best tool for educating is visual representation; and that's why I want to find new ways to educate people on different aspects of a concept. I'm also a big fan of video games, exercise, and Marvel. </p>
+            <br>
+            <p> I dream of being a part of an organization that cares a lot about its community and focuses on relaying messages through visual media. With this in mind, I envision a career that lets me lead a team to create meaningful video that resonates within each viewer.</p>
             <div class="bio">
                 <div class="button"><a href="file/Resume%20-%20Brandon%20Birk.pdf" target="_blank">Resume</a></div>
             </div>
@@ -50,7 +64,17 @@
 
         <div class="bioimg">
             <img src="img/me.jpg" alt="Bio">
+            <div class="icons">
+                <a href="https://www.facebook.com/brandon.birk.9" class="fa fa-facebook" target="_blank"></a>
+                <a href="https://www.instagram.com/brandonbirk/?hl=en" class="fa fa-instagram" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/brandon-birk-36b4a3114/" class="fa fa-linkedin" target="_blank"></a>
+                <p class="continfo">Phone: 778-878-4098
+                <br>
+                Email: brandonbirk1995@gmail.com</p>
+            </div>
         </div>
+
+
     </div>
 
 
