--- a/home.html
+++ b/home.html
@@ -26,17 +26,33 @@
         </video>
     </div>
 
-    <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a class="active" href="home.html">Home</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input hidden type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <ul id="menu">
+                <div class="topnavborder">
+                    <div class="container">
+                        <header>
+
+                            <nav>
+                                <ul>
+                                    <li><a class="active" href="home.html">Home</a></li>
+                                    <li><a href="work.html">Work</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                </ul>
+                            </nav>
+
+                        </header>
+
+                    </div>
+                </div>
+            </ul>
         </div>
-    </header>
+    </nav>
 
     <h1 class="title">Pleasure in the job
         <br>
