--- a/styleguide.html
+++ b/styleguide.html
@@ -19,20 +19,33 @@
 
 <body>
 
-    <div class="container">
-        <header>
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input hidden type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
 
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
+            <ul id="menu">
+                <div class="topnavborder">
+                    <div class="container">
+                        <header>
 
-        </header>
+                            <nav>
+                                <ul>
+                                    <li><a href="home.html">Home</a></li>
+                                    <li><a href="work.html">Work</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                </ul>
+                            </nav>
 
-    </div>
+                        </header>
+
+                    </div>
+                </div>
+            </ul>
+        </div>
+    </nav>
     
 
     <div class="col-50">
