--- a/work.html
+++ b/work.html
@@ -19,19 +19,33 @@
 
 <body>
 
-    <header>
-        <div class="container">
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input hidden type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
 
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a class="active" href="work.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
+            <ul id="menu">
+                <div class="topnavborder">
+                    <div class="container">
+                        <header>
 
+                            <nav>
+                                <ul>
+                                    <li><a href="home.html">Home</a></li>
+                                    <li><a href="work.html">Work</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                </ul>
+                            </nav>
+
+                        </header>
+
+                    </div>
+                </div>
+            </ul>
         </div>
-    </header>
+    </nav>
 
     <div class="projectholder">
         <img src="img/paradigm.png" alt="Bio">
