Added in a photography page and lightbox

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
                                 <ul>
                                     <li><a href="home.html">Home</a></li>
                                     <li><a href="work.html">Work</a></li>
+                                    <li><a href="photography.html">Photography</a></li>
                                     <li><a class="active" href="about.html">About</a></li>
                                 </ul>
                             </nav>
