--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
                                 <ul>
                                     <li><a class="active" href="home.html">Home</a></li>
                                     <li><a href="work.html">Work</a></li>
+                                    <li><a href="photography.html">Photography</a></li>
                                     <li><a href="about.html">About</a></li>
                                 </ul>
                             </nav>
