--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 <ul>
                                     <li><a href="home.html">Home</a></li>
                                     <li><a href="work.html">Work</a></li>
+                                    <li><a href="photography.html">Photography</a></li>
                                     <li><a href="about.html">About</a></li>
                                 </ul>
                             </nav>
