--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide</title>
+    <title>About</title>
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/kintec.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open%20Sans" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open%20Sans" rel="stylesheet">
@@ -37,7 +38,7 @@
                                     <li><a href="work.html">Work</a></li>
                                     <li><a href="photography.html">Photography</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a class="active" href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -49,24 +50,25 @@
         </div>
     </nav>
 
-    <div class="center">
-
-        <h1>Kintec: Footwear & Orthotics - Lower Back Pain</h1>
-
-        <br>
-        <p class="vid">
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0_SUTO7QGYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </p>
-        <br>
-        <p>My recent co-op experience at Kintec: Footwear and Orthotics provided me with valuable experience that has boosted my communication skills and ability to work on team-oriented projects. My most notable project was a lower back pain video that helps those suffering with soreness in combating the symptoms to alleviate stress and tension to live a healthier and more enjoyable life.</p>
-        <br>
-        <p>I first began by reviewing the script the Social Media Coordinator had compiled that the pedorthist would be reading and familiarized myself with the different components that contribute to lower back pain. I then brought my thoughts up on what to do in the video to my supervisor and marketing team members. From there, it was a matter of filming the video and obtaining the footage. I had worked with this pedorthist before and he spoke slowly, so it was a challenge for me to keep him on pace in order to keep the length of the video as short as possible.</p>
-        <br>
-        <p>After the video was filmed, one of the more enjoyable parts of the project was to include animations of symbols and text to portray the points more effectively. This was done while I was also working on sequencing and colour correction. After several iterations, the video was approved by my supervisor and the video was published. For me, this was one of the projects that allowed me to portray most of my skills and I am happy with how it turned out.</p>
-
-
+    <div class="contact-title">
+        <h1>Need to reach me? No problem.</h1>
+        <h2>Shoot me an email and I'll get back to you as soon as I can.</h2>
     </div>
+    
+    <div class="contact-form">
+        <form id="contact-form" method="post" action="contact-form-handler.php">
+            <input name="name" type="text" class="form-control" placeholder="Your Name" required>
+            <br>
+            <input name="email" type="text" class="form-control" placeholder="Your Email" required>
+            <br>
+            <textarea name="message" type="text" class="form-control" placeholder="Message" row="4" required>
+            </textarea>
+            <br>
+            <input type="submit" class="form-control submit" value="Send">
+        </form>
+    </div>
+
+
 
 
     <footer>
@@ -96,6 +98,9 @@
         </div>
 
     </footer>
+
+
+
 </body>
 
 
