--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
                                     <li><a href="work.html">Work</a></li>
                                     <li><a href="photography.html">Photography</a></li>
                                     <li><a href="about.html">About</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
 
