--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <nav role="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -28,25 +28,13 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a href="photography.html">Photography</a></li>
-                                    <li><a class="active" href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a class="active" href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
 
@@ -71,8 +59,8 @@
                 <a href="https://www.instagram.com/brandonbirk/?hl=en" class="fa fa-instagram" target="_blank"></a>
                 <a href="https://www.linkedin.com/in/brandon-birk-36b4a3114/" class="fa fa-linkedin" target="_blank"></a>
                 <p class="continfo">Phone: 778-878-4098
-                <br>
-                Email: brandonbirk1995@gmail.com</p>
+                    <br>
+                    Email: brandonbirk1995@gmail.com</p>
             </div>
         </div>
 
@@ -83,8 +71,8 @@
     <footer>
         <div class="footercontainer">
             <div class="footleft">
-                <a href=index.html>
-                    <h4><a href="styleguide.html">Style Guide</a></h4>
+                <a href=index.html></a>
+                <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
 
