--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide</title>
+    <title>Home - Brandon Birk</title>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
 
@@ -26,7 +26,7 @@
         </video>
     </div>
 
-    <nav role="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -34,25 +34,13 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a class="active" href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a href="photography.html">Photography</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
 
