--- a/kintec.html
+++ b/kintec.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide</title>
+    <title>Kintec: Footwear & Orthotics</title>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/kintec.css" rel="stylesheet">
 
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav role="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -27,25 +27,13 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a href="photography.html">Photography</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
 
@@ -56,7 +44,7 @@
         <br>
         <p class="vid">
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0_SUTO7QGYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0_SUTO7QGYs" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
         <br>
         <p>My recent co-op experience at Kintec: Footwear and Orthotics provided me with valuable experience that has boosted my communication skills and ability to work on team-oriented projects. My most notable project was a lower back pain video that helps those suffering with soreness in combating the symptoms to alleviate stress and tension to live a healthier and more enjoyable life.</p>
@@ -72,7 +60,7 @@
     <footer>
         <div class="footercontainer">
             <div class="footleft">
-                <a href=index.html>
+                <a href=index.html></a>
                     <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
