--- a/photography.html
+++ b/photography.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide</title>
+    <title>Photography</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/photography.css" rel="stylesheet">
     <link href="css/lightbox.min.css" rel="stylesheet">
-    <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open%20Sans" />
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
@@ -21,7 +21,7 @@
 
 <body>
 
-    <nav role="navigation">
+   <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -29,36 +29,24 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a class="active" href="photography.html">Photography</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a class="active" href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
 
     <div class="gallery">
-        <a href="gallery/pic1.jpg" data-lightbox="mygallery"><img src="gallery/pic1-small.jpg"></a>
-        <a href="gallery/pic2.jpg" data-lightbox="mygallery"><img src="gallery/pic2-small.jpg"></a>
-        <a href="gallery/pic3.jpg" data-lightbox="mygallery"><img src="gallery/pic3-small.jpg"></a>
-        <a href="gallery/pic4.jpg" data-lightbox="mygallery"><img src="gallery/pic4-small.jpg"></a>
-        <a href="gallery/pic5.jpg" data-lightbox="mygallery"><img src="gallery/pic5-small.jpg"></a>
-        <a href="gallery/pic6.jpg" data-lightbox="mygallery"><img src="gallery/pic6-small.jpg"></a>
-        <a href="gallery/pic7.jpg" data-lightbox="mygallery"><img src="gallery/pic7-small.jpg"></a>
+        <a href="gallery/pic1.jpg" data-lightbox="mygallery"><img src="gallery/pic1-small.jpg" alt="gallerypic1"></a>
+        <a href="gallery/pic2.jpg" data-lightbox="mygallery"><img src="gallery/pic2-small.jpg" alt="gallerypic2"></a>
+        <a href="gallery/pic3.jpg" data-lightbox="mygallery"><img src="gallery/pic3-small.jpg" alt="gallerypic3"></a>
+        <a href="gallery/pic4.jpg" data-lightbox="mygallery"><img src="gallery/pic4-small.jpg" alt="gallerypic4"></a>
+        <a href="gallery/pic5.jpg" data-lightbox="mygallery"><img src="gallery/pic5-small.jpg" alt="gallerypic5"></a>
+        <a href="gallery/pic6.jpg" data-lightbox="mygallery"><img src="gallery/pic6-small.jpg" alt="gallerypic6"></a>
+        <a href="gallery/pic7.jpg" data-lightbox="mygallery"><img src="gallery/pic7-small.jpg" alt="gallerypic7"></a>
         
     </div>
 
@@ -67,7 +55,7 @@
     <footer>
         <div class="footercontainer">
             <div class="footleft">
-                <a href=index.html>
+                <a href=index.html></a>
                     <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
