--- a/styleguide.html
+++ b/styleguide.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav role="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -27,25 +27,13 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a href="photography.html">Photography</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
     
@@ -71,7 +59,7 @@
         <hr>
 
         <h2>Media & Art Direction</h2>
-        <video width="80%" autoplay loop muted>
+        <video width="800" autoplay loop muted>
             <source src="vid/home.mp4" type="video/mp4">
         </video>
 
@@ -101,7 +89,7 @@
     <footer>
         <div class="footercontainer">
             <div class="footleft">
-                <a href=index.html>
+                <a href=index.html></a>
                     <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
