--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide</title>
+    <title>Work</title>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/work.css" rel="stylesheet">
 
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav role="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -27,32 +27,20 @@
             <span></span>
 
             <ul id="menu">
-                <div class="topnavborder">
-                    <div class="container">
-                        <header>
-
-                            <nav>
-                                <ul>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="work.html">Work</a></li>
-                                    <li><a href="photography.html">Photography</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-
-                        </header>
-
-                    </div>
-                </div>
+                <li><a href="home.html">Home</a></li>
+                <li><a class="active" href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+
         </div>
     </nav>
 
     <div class="projectholder">
         <img src="img/paradigm.png" alt="Bio">
         <h1>Paradigm Surfaces</h1>
-        <div class="button"><a href="paradigm.html">View</div>
+        <div class="button"><a href="paradigm.html">View</a></div>
         
 
     </div>
@@ -69,7 +57,7 @@
 <footer>
         <div class="footercontainer">
             <div class="footleft">
-                <a href=index.html>
+                <a href=index.html></a>
                     <h4><a href="styleguide.html">Style Guide</a></h4>
                 
             </div>
