Final changes to submission

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
     </nav>
 
     <div class="contact-title">
+        <img class="cont-img" src="img/cont-img.jpg" alt="Bio">
         <h1>Need to reach me? No problem.</h1>
         <h2>Shoot me an email and I'll get back to you as soon as I can.</h2>
     </div>
@@ -73,15 +74,12 @@
                 <b>Simon Fraser University</b>
             </div>
 
-
-            <!--
+  
             <div class="footright">
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
             </div>
--->
-
 
         </div>
 
