--- a/home.html
+++ b/home.html
@@ -18,6 +18,16 @@
 
 <body>
 
+    <nav class="navigation">
+            <ul>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+
+    </nav>
 
     <div class="video-container">
         <video id="video-bg-elem" autoplay loop muted>
@@ -26,23 +36,6 @@
         </video>
     </div>
 
-    <nav class="navigation">
-        <div id="menuToggle">
-            <input hidden type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-
-            <ul id="menu">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="photography.html">Photography</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
-            </ul>
-
-        </div>
-    </nav>
 
     <h1 class="title">Pleasure in the job
         <br>
