--- a/styleguide.html
+++ b/styleguide.html
@@ -9,6 +9,7 @@
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/styleguide.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open%20Sans" />
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
@@ -36,7 +37,7 @@
 
         </div>
     </nav>
-    
+
 
     <div class="col-50">
         <h1>Project 03 - Style Guide</h1>
@@ -84,13 +85,29 @@
             </nav>
         </div>
 
+        <hr>
+        <h2>Form</h2>
+        <div class="contact-form">
+            
+            <form class="contact-form" method="post" action="contact-form-handler.php">
+                <input name="name" type="text" class="form-control" placeholder="Your Name" required>
+                <br>
+                <input name="email" type="text" class="form-control" placeholder="Your Email" required>
+                <br>
+                <textarea name="message" class="form-control" placeholder="Message" required>
+            </textarea>
+                <br>
+                <button class="button" type="submit" name="submit">Send</button>
+            </form>
+        </div>
+
     </div>
 
     <footer>
         <div class="footercontainer">
             <div class="footleft">
                 <a href=index.html></a>
-                    <h4><a href="styleguide.html">Style Guide</a></h4>
+                <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
 
@@ -100,16 +117,11 @@
                 <b>Simon Fraser University</b>
             </div>
 
-
-            <!--
             <div class="footright">
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
             </div>
--->
-
-
         </div>
 
     </footer>
