Added github link in footer for all pages

--- a/about.html
+++ b/about.html
@@ -80,6 +80,10 @@
             </div>
 
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
