--- a/citations.html
+++ b/citations.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
 
-    
+
     <div class="link-container">
         <h1>Citations</h1>
         <ol>
@@ -46,7 +46,7 @@
             <li>How to make a mobile hamburger menu: <a href="https://codepen.io/erikterwan/pen/EVzeRP" target="_blank">https://codepen.io/erikterwan/pen/EVzeRP</a></li>
             <li>How to create a contact form: <a href="https://www.youtube.com/watch?v=Iv93yjdvkWI" target="_blank">https://www.youtube.com/watch?v=Iv93yjdvkWI</a></li>
             <li>How to create social media icons: <a href="https://www.w3schools.com/howto/howto_css_social_media_buttons.asp" target="_blank">https://www.w3schools.com/howto/howto_css_social_media_buttons.asp</a></li>
-            
+
             <li>All other content including images, videos, and text was created by myself.</li>
         </ol>
     </div>
@@ -67,6 +67,10 @@
             </div>
 
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
