--- a/kintec.html
+++ b/kintec.html
@@ -61,7 +61,7 @@
         <div class="footercontainer">
             <div class="footleft">
                 <a href=index.html></a>
-                    <h4><a href="styleguide.html">Style Guide</a></h4>
+                <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
 
@@ -70,8 +70,12 @@
                 <br>
                 <b>Simon Fraser University</b>
             </div>
-         
+
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
