--- a/paradigm.html
+++ b/paradigm.html
@@ -49,16 +49,16 @@
         <br>
         <p>My selection for the first of two process analyses is a project I did for a friend's family business in February 2019. The business is a flooring store that specializes in the retail of natural stone and tile flooring. This was my first project that gave me the opportunity to plan out and shoot independently, so this is one of my proudest projects to date. Initially, I had approached my friend a year prior to the actual shoot but fell out of touch. Once we had scheduled a date, I brainstormed some questions to ask her about what her family's business does, what they strive to accomplish, and what customers can expect when they stop by the location. Below is the list of questions that were presented a week prior to the shoot. </p>
         <br>
- 
-            <ol>
-                <li>What is Paradigm Surfaces?</li>
-                <li>What does Paradigm strive to accomplish?</li>
-                <li>What do you wish to achieve when speaking with customers?</li>
-                <li>What process do you go through when recommending floors/tiles?</li>
-                <li>What makes you unique compared to other flooring stores?</li>
-                <li>What else should people know?</li>
-            </ol>
-   
+
+        <ol>
+            <li>What is Paradigm Surfaces?</li>
+            <li>What does Paradigm strive to accomplish?</li>
+            <li>What do you wish to achieve when speaking with customers?</li>
+            <li>What process do you go through when recommending floors/tiles?</li>
+            <li>What makes you unique compared to other flooring stores?</li>
+            <li>What else should people know?</li>
+        </ol>
+
         <br>
         <p>On my initial visit, I scouted a location within the store that would suit the framing of the interview, and found the front desk most appropriate. On the day of the shoot I had already planned what shots I was going to use based on experience from past projects. This is also why I did not create a storyboard, as interviews typically consist of b-roll that is captured on site. </p>
 
@@ -70,7 +70,7 @@
         <div class="footercontainer">
             <div class="footleft">
                 <a href=index.html></a>
-                    <h4><a href="styleguide.html">Style Guide</a></h4>
+                <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
 
@@ -80,8 +80,12 @@
                 <b>Simon Fraser University</b>
             </div>
 
-    
+
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
