--- a/photography.html
+++ b/photography.html
@@ -21,7 +21,7 @@
 
 <body>
 
-   <nav class="navigation">
+    <nav class="navigation">
         <div id="menuToggle">
             <input hidden type="checkbox" />
             <span></span>
@@ -47,7 +47,7 @@
         <a href="gallery/pic5.jpg" data-lightbox="mygallery"><img src="gallery/pic5-small.jpg" alt="gallerypic5"></a>
         <a href="gallery/pic6.jpg" data-lightbox="mygallery"><img src="gallery/pic6-small.jpg" alt="gallerypic6"></a>
         <a href="gallery/pic7.jpg" data-lightbox="mygallery"><img src="gallery/pic7-small.jpg" alt="gallerypic7"></a>
-        
+
     </div>
 
 
@@ -56,7 +56,7 @@
         <div class="footercontainer">
             <div class="footleft">
                 <a href=index.html></a>
-                    <h4><a href="styleguide.html">Style Guide</a></h4>
+                <h4><a href="styleguide.html">Style Guide</a></h4>
 
             </div>
 
@@ -66,8 +66,12 @@
                 <b>Simon Fraser University</b>
             </div>
 
-      
+
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
