--- a/styleguide.html
+++ b/styleguide.html
@@ -88,7 +88,7 @@
         <hr>
         <h2>Form</h2>
         <div class="contact-form">
-            
+
             <form class="contact-form" method="post" action="contact-form-handler.php">
                 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
                 <br>
@@ -118,6 +118,10 @@
             </div>
 
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
