--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,12 @@
                 <b>Simon Fraser University</b>
             </div>
 
-  
+
             <div class="footright">
+                <a href="https://github.com/bbirk95/P03_V2" target="_blank">
+                    <h4>Github Link</h4>
+                    <br>
+                </a>
                 <a href="citations.html">
                     <h4>Citations</h4>
                 </a>
