made more accurate "alt" tags for gallery

--- a/photography.html
+++ b/photography.html
@@ -40,13 +40,13 @@
     </nav>
 
     <div class="gallery">
-        <a href="gallery/pic1.jpg" data-lightbox="mygallery"><img src="gallery/pic1-small.jpg" alt="gallerypic1"></a>
-        <a href="gallery/pic2.jpg" data-lightbox="mygallery"><img src="gallery/pic2-small.jpg" alt="gallerypic2"></a>
-        <a href="gallery/pic3.jpg" data-lightbox="mygallery"><img src="gallery/pic3-small.jpg" alt="gallerypic3"></a>
-        <a href="gallery/pic4.jpg" data-lightbox="mygallery"><img src="gallery/pic4-small.jpg" alt="gallerypic4"></a>
-        <a href="gallery/pic5.jpg" data-lightbox="mygallery"><img src="gallery/pic5-small.jpg" alt="gallerypic5"></a>
-        <a href="gallery/pic6.jpg" data-lightbox="mygallery"><img src="gallery/pic6-small.jpg" alt="gallerypic6"></a>
-        <a href="gallery/pic7.jpg" data-lightbox="mygallery"><img src="gallery/pic7-small.jpg" alt="gallerypic7"></a>
+        <a href="gallery/pic1.jpg" data-lightbox="mygallery"><img src="gallery/pic1-small.jpg" alt="Girl"></a>
+        <a href="gallery/pic2.jpg" data-lightbox="mygallery"><img src="gallery/pic2-small.jpg" alt="Diner"></a>
+        <a href="gallery/pic3.jpg" data-lightbox="mygallery"><img src="gallery/pic3-small.jpg" alt="Clock"></a>
+        <a href="gallery/pic4.jpg" data-lightbox="mygallery"><img src="gallery/pic4-small.jpg" alt="Parkade"></a>
+        <a href="gallery/pic5.jpg" data-lightbox="mygallery"><img src="gallery/pic5-small.jpg" alt="Girl-Smiles"></a>
+        <a href="gallery/pic6.jpg" data-lightbox="Girl-Under-Purple-Lights"><img src="gallery/pic6-small.jpg" alt="gallerypic6"></a>
+        <a href="gallery/pic7.jpg" data-lightbox="mygallery"><img src="gallery/pic7-small.jpg" alt="Happy-Smile"></a>
 
     </div>
 
